Fix image size on mobile

--- a/src/components/Swiper/Swiper.css
+++ b/src/components/Swiper/Swiper.css
@@ -1,12 +1,18 @@
 .swipe-container {
   position: relative;
   overflow: hidden;
-  width: 500px;
-  max-width: 100%;
+  max-width: 500px;
 }
 
 .images-container {
   display: flex;
   align-items: flex-start;
   transition: transform .5s ease-out;
+  max-width: 100%;
+}
+
+.images-container img {
+  width: 100%;
+  min-width: 100%;
+  object-fit: contain;
 }
